# evil-winrm-py

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: wiki.yml
docs/: README.md  development.md  install.md  kb.md  release.md  usage.md
docs/sample/: krb5.conf
evil_winrm_py/: __init__.py  __main__.py  cli.py  evil_winrm_py.py
evil_winrm_py/_ps/: exec.ps1  send.ps1
evil_winrm_py/pypsrp_ewp/: wsman.py
evil_winrm_py/src/: commands.py  terminal.py
evil_winrm_py/src/ps_scripts/: loaddll.ps1
evil_winrm_py/src/pypsrp_ewp/: wsman.py
evil_winrm_py/src/utils/: banner.py  completers.py  kerberos.py  logbook.py
