[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "evil-winrm-py"
version = "1.5.0"
description = "Execute commands interactively on remote Windows machines using the WinRM protocol."
authors = [
    {name = "adityatelange"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Topic :: Security",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = {text = "MIT"}
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pypsrp (>=0.8.1,<0.9.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pygments (>=2.19.2,<3.0.0)"
]

[project.optional-dependencies]
kerberos = [
    "pypsrp[kerberos] (>=0.8.1,<0.9.0)",
]

[project.urls]
homepage = "https://github.com/adityatelange/evil-winrm-py"
repository = "https://github.com/adityatelange/evil-winrm-py"
issues = "https://github.com/adityatelange/evil-winrm-py/issues"

[project.scripts]
evil-winrm-py = 'evil_winrm_py.evil_winrm_py:main'
ewp = 'evil_winrm_py.evil_winrm_py:main'
